docs: rewrite README with MCP architecture/security and add CLAUDE.md
- Document prerequisites, configuration, MCP primitives and security model
- Add CLAUDE.md project guidance
- Ignore npm publish artifacts (*.tgz, /package/, npm/)